--- a/src/pages/sidebar/dashboard/styles.css
+++ b/src/pages/sidebar/dashboard/styles.css
@@ -43,9 +43,44 @@ body {
     background: var(--sidebar-color);
 }
 
+.sidebar li {
+    height: 50px;
+    margin-top: 10px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar li a {
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar li .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 60px;
+}
+
+.navText {
+    color: #707070;
+}
+
+.searchLink{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 60px;
+    background: var(--primary-color-light);
+}
+
 .sidebar header {
     position: relative;
 }
+
 .sidebar .imageText img {
     width: 40px;
     border-radius: 6px;
