--- a/src/pages/sidebar/dashboard/styles.css
+++ b/src/pages/sidebar/dashboard/styles.css
@@ -52,10 +52,14 @@ body {
 }
 
 .sidebar li a {
+    height: 100%;
+    width: 100%;
     text-decoration: none;
     height: 100%;
     display: flex;
     align-items: center;
+    border-radius: 6px;
+    transition: var(--tran-04);
 }
 
 .sidebar li .icon {
@@ -65,7 +69,8 @@ body {
     min-width: 60px;
 }
 
-.navText {
+.sidebar li a {
+
     color: #707070;
 }
 
@@ -77,6 +82,18 @@ body {
     background: var(--primary-color-light);
 }
 
+.searchLink input {
+    height: 100%;
+    width: 73%;
+    outline: none;
+    border: none;
+    border-radius: 6px;
+    background: var(--primary-color-light);
+}
+
+.sidebar li a:hover {
+    background: var(--primary-color);
+}
 .sidebar header {
     position: relative;
 }
